# advent-of-code

./: .gitignore  README.md
clojure/: .gitignore  README.md  boot.properties  build.boot  project.clj  run.sh
haskell/: README.md  run.sh
haskell/src/: hello.hs
julia/2020/: day1-warmup.jl
julia/2021/: day1.jl  day10.jl  day11.jl  day12.jl  day13.jl  day14.jl  day15.jl  day16.jl  day17.jl  day18.jl  day19.jl  day2.jl  day20.jl  day21.jl  day22.jl  day23.jl  day24.jl  day25.jl  day3.jl  day4.jl  day5.jl  day6.jl  day7.jl  day8.jl  day9.jl  notes.md.jl  util.jl
python/: 17.py  2-quick-and-dirty.py  23-2.py  README.md
python/2017/: 17.py  4-quick-and-dirty.py
python/2018/: day1.py  day10.py  day11.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day18_man.py  day19.py  day20.py  day21.py  day21_manual.py  day22.py  day23.py  day24.py  day25.py  day3.py  day4.py  day6.py  day7.py  day8.py  fetch.sh  util.py
python/2019/: day14.py  day18.py  (+10 more)
python/2019-elm/: day9.py  intcode.py
rust/: Cargo.toml
rust/2019/: computer.rs  day1.rs  day10.rs  day11.rs  day12.rs  day14.rs  day15.rs  day16.rs  day17.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  decompile.py  util.rs
rust/2019/input/: day5_test1.txt
rust/2024/: README.md
rust/2024/input/: day15_test3.txt  day17.txt  test.txt
rust/2024/src/: day1.rs  main.rs  util.rs
scala/: build.sbt
typescript/: .envrc  .eslintrc.js  Learnings.md  README.md  package-lock.json  package.json  tsc.sh
util_scripts/: fetch  fetch.sh  run  run.sh  watch_run  watch_run.sh
(+133 files in other folders)
