[package]
name = "advent_of_code"
version = "0.1.0"
authors = ["David Schlyter <dschlyter@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
# run "cargo build" after adding stuff here

[[bin]]
name = "test"
path = "2019/day12.rs"